# remote_simulate

./: controller.cpp  controller.h  document.txt  main.cpp
controller/: CMakeCache.txt  CMakeLists.txt  command.h  controller.cpp  controller.h  image.h  main.cpp
